--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Scraping With Mongoose</title>
+    <title>News Scraper - Rishikesh</title>
     <style>
       body { background-color: #F2F6D0 }
       #wrapper {
@@ -38,8 +38,8 @@
   </head>
   <body>
     <div id="wrapper">
-      <h1>Note Scraper</h1>
-      <h2><i>If you can do this...the homework should be no problem.</i></h2>
+      <h1>समाचार स्क्रापर (News Scraper)</h1>
+      <h2><i>ताजा समाचर शिर्षक, सारांश र लिंक (latest news headlines, summaries and link) |</i></h2>
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
